@@ -18,6 +18,7 @@ Changes in Release 2.6.0
 [JOST-200] - Reduce memory usage of unit tests
 [JOST-201] - SAML1 and 2 base message encoders have incorrect selection logic in getEndpointURL()
 [JOST-203] - Head/body template injection for SAML binding templates
+[JOST-205] - MetadataProvider doesn't report error during refresh if the metadata file doesn't exist any more
 
 Changes in Release 2.5.3
 =============================================
